Refactor code to add input sanitization and validation